--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "razorpay": "^2.9.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
+    "nodemailer": "^6.9.0",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
