--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
     "nodemailer": "^6.9.0",
+     "resend": "^3.1.0",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
